<resources>
    <string name="app_name">Project5</string>
    <string name="translated_text_will_appear_here">Translated Text will appear here</string>
    <string name="write_something">Write something</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="german">German</string>
    <string name="english_Translated">English</string>
    <string name="spanish_Translated">Spanish</string>
    <string name="german_Translated">German</string>
    <string name="source_language">Source Language:</string>
    <string name="translation">Translation:</string>
</resources>